distribution/araneae-reasoner/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: kubeflow
    istio-injection: enabled
  name: araneae-reasoner
