distribution/araneae-reasoner/araneae-reasoner-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: araneae-reasoner-gateway
  namespace: araneae-reasoner
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - reasoner.araneae.io
    port:
      name: http
      number: 80
      protocol: HTTP
    # Upgrade HTTP to HTTPS
    tls:
      httpsRedirect: true
  - hosts:
    - reasoner.araneae.io
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: araneae-reasoner-ingressgateway-certs
